test/pass/show/show_optarg.lly
define f(a: integer, b: *integer=11) {
}

show(f)
