test/fail/basic_syntax/function_arg_redecl.lly
#[
SyntaxError: a has already been declared.
    from function_arg_redecl.lly:6
]#

define f(a: integer, a: integer) {}
